--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+<!--<data>
+
+    <variable
+        name="viewModel" type="com.example.afentanes.pokedexandroid.modelview.PokemonViewModelImpl" />
+</data>-->
+
+<LinearLayout
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.afentanes.pokedexandroid.MainActivity">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <SearchView
+            android:id="@+id/search_pokemon_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">Search pokemon
+        </SearchView>
+
+
+    </android.support.design.widget.AppBarLayout>
+
 
     <FrameLayout
         android:id="@+id/content"
@@ -16,10 +39,10 @@
 
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/pokemon_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            android:id="@+id/pokemon_list"/>
+            android:scrollbars="vertical" />
 
     </FrameLayout>
 
@@ -32,3 +55,7 @@
         app:menu="@menu/navigation" />
 
 </LinearLayout>
+
+
+</layout>
+
