implementing binding for special fields

--- a/app/src/main/res/layout/pokemon_view.xml
+++ b/app/src/main/res/layout/pokemon_view.xml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:id="@+id/poke_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"/>
-    <TextView
-        android:id="@+id/poke_name"
+    <data>
+        <variable name="pokemon" type="com.example.afentanes.pokedexandroid.model.Pokemon" />
+        <variable name="pokemonView" type="com.example.afentanes.pokedexandroid.modelview.PokemonView" />
+    </data>
+    <RelativeLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/poke_image"
-        android:layout_alignParentRight="true"
-        />
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:onClick="@{()-> pokemonView.displayPokemonDescription(pokemon)}">
+
+        <ImageView
+            android:id="@+id/poke_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
+        <TextView
+            android:id="@+id/poke_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/poke_image"
+            android:layout_alignParentRight="true"
+            android:text="@{pokemon.name}"
+            />
 
 
 
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
