--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-<!--<data>
-
-    <variable
-        name="viewModel" type="com.example.afentanes.pokedexandroid.modelview.PokemonViewModelImpl" />
-</data>-->
+<data>
+    <import type="java.util.List" />
+    <variable name="pokemonViewModel" type="com.example.afentanes.pokedexandroid.modelview.PokemonViewModel" />
+    <variable name="pokemonsAvailable" type="java.util.List" />
+</data>
 
 <LinearLayout
     android:id="@+id/container"
@@ -24,7 +24,7 @@
         <SearchView
             android:id="@+id/search_pokemon_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">Search pokemon
+            android:layout_height="wrap_content" >Search pokemon
         </SearchView>
 
 
