--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,12 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <SearchView
-            android:id="@+id/search_pokemon_view"
+
+        <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >Search pokemon
-        </SearchView>
+            android:layout_height="wrap_content"
+            android:id="@+id/search_pokemon_text"
+            />
 
 
     </android.support.design.widget.AppBarLayout>
