--- a/app/src/main/res/layout/pokemon_expanded_view.xml
+++ b/app/src/main/res/layout/pokemon_expanded_view.xml
@@ -6,34 +6,39 @@
         android:id="@+id/pokemon_desc_image_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/poke_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/pokemon_desc_image_id"
         android:layout_alignParentRight="true"
-        />
+        android:layout_toLeftOf="@id/pokemon_desc_image_id"
+        android:text="name"
+        android:textSize="30sp" />
+
     <TextView
         android:id="@+id/weight_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/poke_name"
         android:layout_alignParentRight="true"
-        />
+        android:layout_below="@id/poke_name"
+        android:text="weight" />
+
     <TextView
         android:id="@+id/abilities_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/poke_name"
         android:layout_alignParentRight="true"
-        />
+        android:layout_below="@id/weight_id"
+        android:text="abilities" />
 
     <TextView
         android:id="@+id/description_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/abilities_id"
         android:layout_alignParentRight="true"
-        />
+        android:layout_below="@id/abilities_id"
+        android:text="description"
+        android:textSize="18sp" />
 
 </RelativeLayout>
