--- a/app/src/main/res/layout/pokemon_expanded_view.xml
+++ b/app/src/main/res/layout/pokemon_expanded_view.xml
@@ -1,44 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
-        android:id="@+id/pokemon_desc_image_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    android:layout_height="match_parent"
+    android:scrollbars="vertical">
 
     <TextView
         android:id="@+id/poke_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_toLeftOf="@id/pokemon_desc_image_id"
+
         android:text="name"
         android:textSize="30sp" />
 
-    <TextView
-        android:id="@+id/weight_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+    <ImageView
+        android:id="@+id/pokemon_desc_image_id"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_below="@id/poke_name"
-        android:text="weight" />
+        />
 
-    <TextView
-        android:id="@+id/abilities_id"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/weight_id"
-        android:text="abilities" />
+        android:layout_toRightOf="@id/pokemon_desc_image_id"
+        android:orientation="vertical"
+        >
 
-    <TextView
-        android:id="@+id/description_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/abilities_id"
-        android:text="description"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/weight_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="weight" />
+
+        <TextView
+            android:id="@+id/abilities_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="abilities" />
+
+        <TextView
+            android:id="@+id/description_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="description"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+
 
 </RelativeLayout>
