--- a/app/src/main/res/layout/pokemon_view.xml
+++ b/app/src/main/res/layout/pokemon_view.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
-        <variable name="pokemon" type="com.example.afentanes.pokedexandroid.model.Pokemon" />
+        <variable name="pokemonSelected" type="com.example.afentanes.pokedexandroid.model.Pokemon" />
         <variable name="pokemonViewModel" type="com.example.afentanes.pokedexandroid.modelview.PokemonViewModel" />
     </data>
     <RelativeLayout
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:onClick="@{()-> pokemonViewModel.pokemonSelected(pokemon)}">
+        android:onClick="@{()-> pokemonViewModel.pokemonSelected(pokemonSelected)}">
 
         <ImageView
             android:id="@+id/poke_image"
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/poke_image"
             android:layout_alignParentRight="true"
-            android:text="@{pokemon.name}"
+            android:text="@{pokemonSelected.name}"
             />
 
     </RelativeLayout>
