--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,20 +23,24 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="5">
 
                 <TextView
                     android:id="@+id/user_id_label"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="username" />
+                    android:text="username"
+                    android:layout_weight="4"/>
 
                 <Button
                     android:id="@+id/log_out"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Log out"
-                    android:visibility="invisible" />
+                    android:visibility="invisible"
+                    android:layout_weight="1"
+                    />
             </LinearLayout>
 
 
@@ -49,33 +53,33 @@
 
 
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/search_pokemon_text"
-            />
         <FrameLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/pokemon_list"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="vertical" />
+                android:orientation="vertical">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/search_pokemon_text"
+                    />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/pokemon_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="vertical" />
+            </LinearLayout>
+
 
         </FrameLayout>
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="?android:attr/windowBackground"
-            app:menu="@menu/navigation" />
 
     </LinearLayout>
 
