--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="username"
-                    android:layout_weight="4"/>
+                    android:layout_weight="4"
+                    android:textSize="20dp"/>
 
                 <Button
                     android:id="@+id/log_out"
@@ -64,11 +65,17 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <EditText
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_search"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/search_pokemon_text"
-                    />
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/search_pokemon_text"
+                        android:hint="search pokemon"
+                        />
+                </android.support.design.widget.TextInputLayout>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/pokemon_list"
