--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,9 +30,12 @@
                     android:id="@+id/user_id_label"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="username"
                     android:layout_weight="4"
-                    android:textSize="20dp"/>
+                    android:defaultFocusHighlightEnabled="true"
+                    android:focusable="auto"
+                    android:text="username"
+                    android:textSize="20dp"
+                    tools:defaultFocusHighlightEnabled="true" />
 
                 <Button
                     android:id="@+id/log_out"
